# gha-updater-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml
src/gha_update/: __init__.py  cache.py  cli.py  config.py  discover.py  engine.py  github_api.py  logging_utils.py  models.py  parse_uses.py  versions.py  yaml_edit.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_engine.py  test_github_api.py  test_hook_manifest.py  test_parse_uses.py  test_support_modules.py  test_versions.py
